tests/ui/traits/trait-associated-type-bounds-36839.stderr
error[E0277]: the trait bound `(): Foo` is not satisfied
  --> $DIR/trait-associated-type-bounds-36839.rs:12:28
   |
LL |     fn broken(&self) where Self::Assoc: Foo {
   |                            ^^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/trait-associated-type-bounds-36839.rs:1:1
   |
LL | pub trait Foo {
   | ^^^^^^^^^^^^^
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
LL + #![feature(trivial_bounds)]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
